<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/mainLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/fancyImg"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/fancytext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Image Toggle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="125dp"/>

    <Spinner
        android:id="@+id/textVarySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/inputText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Type Your Text!"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fancyImg"
        android:layout_marginTop="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Text Color"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/inputText"
        app:layout_constraintLeft_toLeftOf="@id/inputText"/>

    <RadioGroup
        android:id="@+id/McGroup"
        android:layout_width="226dp"
        android:layout_height="148dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="@id/inputText"
        app:layout_constraintTop_toBottomOf="@id/inputText">

        <RadioButton
            android:id="@+id/radBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rad_btn_txt_1" />

        <RadioButton
            android:id="@+id/radBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rad_btn_txt_2" />

        <RadioButton
            android:id="@+id/radBtn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rad_btn_txt_3" />

        <RadioButton
            android:id="@+id/radBtn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rad_btn_txt_4" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/McGroup"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/McGroup"
        android:text="Theme"/>
    <Switch
        android:id="@+id/styleChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="Light"
        android:textOn="Dark"
        android:showText="true"
        app:layout_constraintLeft_toRightOf="@id/McGroup"
        app:layout_constraintTop_toBottomOf="@id/McGroup"
        android:layout_marginTop="50dp"/>
    <CheckBox
        android:id="@+id/largeBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_txt_1"
        app:layout_constraintTop_toBottomOf="@id/McGroup"
        android:layout_marginTop="75dp"
        app:layout_constraintLeft_toLeftOf="@id/McGroup"
        app:layout_constraintRight_toRightOf="@id/McGroup"/>
    <CheckBox
        android:id="@+id/smallBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_txt_2"
        app:layout_constraintTop_toBottomOf="@id/McGroup"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="@id/McGroup"
        app:layout_constraintRight_toRightOf="@id/McGroup"/>
    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="(Press To Apply)"
        android:textColor="@color/colorBtnText"
        android:textSize="18sp"
        android:background="@drawable/fancify"
        android:onClick="sendText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/smallBox"
        android:layout_marginTop="50dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>